# heartattack

./: .gitignore  README-SPANISH.md  README.md  main_english.ipynb  main_spanish.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  app.py  schemas.py
docs/: 01_problem_definition.md  02_data_analysis.md  03_methodology.md  04_results.md
models/: .gitignore  checksums.json
notebooks/: exploration.ipynb
scripts/: generate_preview.py
src/: __init__.py  api_common.py  config.py  data.py  evaluate.py  exceptions.py  logging_config.py  main.py  model.py  security.py  validators.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py
