[project]
name = "heartattack"
version = "1.0.0"
description = "Heart attack risk prediction with Bayesian Networks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kevin Reyes" }]
license = { text = "MIT" }

# Runtime dependencies (used by `src/` and the notebooks).
dependencies = [
    "numpy>=2.0,<3",
    "pgmpy>=1.0,<2"
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "slowapi>=0.1.9,<1",
    "python-multipart>=0.0.9,<1"
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0"
]
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1"
]

[project.urls]
Homepage = "https://github.com/Portfolio-KRV/heartattack"
Repository = "https://github.com/Portfolio-KRV/heartattack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]
force-exclude = true
exclude = ["venv", ".venv", "venv-test", "venv-test2", "__pycache__", "build", "dist", "outputs", "scripts", "notebooks", "space"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "E402", "B008"]  # E501 line-length (formatter); E402 OK for env-vars before imports; B008 OK for FastAPI Depends/File defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
